# python-packages

./: .gitignore  README.md  pyproject.toml  requirements.txt
aiohttp/: scraper.ipynb  scraper.py
httpie/: README.MD
keyring/: keyring.ipynb
nltk/: nltk.ipynb
nltk/.ipynb_checkpoints/: nltk-checkpoint.ipynb
passlib/: passlib.ipynb
pretty-errors/: main.py
pympler/: example.py
pytest/: setup.py
pytest/blackjack/: common.py
pytest/blackjack.egg-info/: PKG-INFO  SOURCES.txt
pytest/tests/: test-blackjack.py
requests/: bitcoin-price-notifier.ipynb  endless-scraper.py  scraper.ipynb
rx/: first.py
tests/: test_python_packages.py
