[tool.poetry]
name = "python-packages"
version = "0.1.0"
description = "Showroom for awesome python packages"
authors = ["Tobias Wessels <twe@ongoingmedia.de>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
Rx = "^3.2.0"
Pympler = "^1.0"
nltk = "^3.6.6"
httpie = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pretty-errors = "^1.2.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
